<resources>
    <string name="app_name">App</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="App_title">Dulendar</string>
    <string name="BMainBackgroud">主界面蓝黑背景</string>
    <string name="TBMain">主界面工具栏</string>
    <string name="TTitle">Duelendar</string>
    <string name="BAddSubject">添加学科</string>
    <string name="TUsername">未填写用户名</string>
    <string name="TUserIDA">账号：</string>
    <string name="TUserIDB">-----</string>
    <string name="IBSetting">setting</string>
    <string name="IBSchoolBackground">学校信息背景</string>
    <string name="IBSchoolImage">SchoolImage</string>
    <string name="TSchoolNameCHN">选择我的学校</string>
    <string name="TSchoolNameENG">Select My School</string>
    <string name="ISplitA">学校、年级分界线</string>
    <string name="TGradeA">-</string>
    <string name="TGradeB">年级</string>
    <string name="ISplitB">年级、已选课程分界线</string>
    <string name="TCoursesA">-</string>
    <string name="TCoursesB">已选课程</string>
    <string name="TCoursesList">课程列表</string>
    <string name="IDefaultSubject1">Course1图标</string>
    <string name="TDefaultSubject1">Course1</string>
    <string name="TDefaultSubject1Form">Online</string>
    <string name="IBOption1">默认学科1设置</string>
    <string name="IDefaultSubject2">Course2图标</string>
    <string name="TDefaultSubject2">Course2</string>
    <string name="TDefaultSubject2Form">Online</string>
    <string name="IBOption2">默认学科2设置</string>
    <string name="IDefaultSubject3">Course3图标</string>
    <string name="TDefaultSubject3">Course3</string>
    <string name="TDefaultSubject3Form">Online</string>
    <string name="IBOption3">默认学科3设置</string>
    <string name="IDefaultSubject4">Course4图标</string>
    <string name="TDefaultSubject4">Course4</string>
    <string name="TDefaultSubject4Form">Online</string>
    <string name="IBOption4">默认学科4设置</string>
    <string name="BClearSubject">删除此学科(包括作业内容)</string>
    <string name="BCheckSubject">修改作业名称</string>
    <string name="BCancelClearSubject">取消</string>
    <string name="TDeleteSubjectSureOrNot">确认删除？</string>
    <string name="BSureDeleteSubject">确认</string>
    <string name="BCancelSureDeleteSubject">取消</string>
    <string name="IBSettingReturnMain">return</string>
    <string name="TSetting">设置</string>
    <string name="TAccount">账号</string>
    <string name="IName">昵称标志</string>
    <string name="TName">昵称</string>
    <string name="PTName">未填写</string>
    <string name="IBName">昵称修改按钮</string>
    <string name="ISchool">学校标志</string>
    <string name="TSchool">学校</string>
    <string name="PTSchool">未选择</string>
    <string name="IBSchool">学校修改按钮</string>
    <string name="TTimeZoneSetting">时区设置</string>
    <string name="ISchoolTimeZone">学校所在时区标志</string>
    <string name="TSchoolTimeZone">学校所在时区</string>
    <string name="PTSchoolTimeZone">未选择</string>
    <string name="IBSchoolTimeZone">学校所在时区修改按钮</string>
    <string name="ILocalTimeZone">本人所在时区标志</string>
    <string name="TLocalTimeZone">本人所在时区</string>
    <string name="PTLocalTimeZone">未选择</string>
    <string name="IBLocalTimeZone">本人所在时区修改按钮</string>
    <string name="TPersonalize">个性化设置</string>
    <string name="IBackground">背景标志</string>
    <string name="TBackground">背景</string>
    <string name="IBBackground">背景修改按钮</string>
    <string name="TCreateSubjectDuelendar">添加学科</string>
    <string name="IBCreateSubjectReturnMain">return</string>
    <string name="TSubjectName">学科名称</string>
    <string name="ETSubjectName">未填写</string>
    <string name="TSubjectLogo">选择学科图标</string>
    <string name="TSubjectColor">选择学科图标底色</string>
    <string name="IBRed">红</string>
    <string name="IBBlue">蓝</string>
    <string name="IBYellow">黄</string>
    <string name="IBGreen">绿</string>
    <string name="IBPink">粉</string>
    <string name="IBPurple">紫</string>
    <string name="IVCorrectRed">红</string>
    <string name="IVCorrectBlue">蓝</string>
    <string name="IVCorrectYellow">黄</string>
    <string name="IVCorrectGreen">绿</string>
    <string name="IVCorrectPink">粉</string>
    <string name="IVCorrectPurple">紫</string>
    <string name="IBComputer">IBComputer</string>
    <string name="IBEconomy">IBEconomy</string>
    <string name="IBEngineering">IBEngineering</string>
    <string name="IBEnglish">IBEnglish</string>
    <string name="IBMedicalScience">IBMedicalScience</string>
    <string name="IBBiology">IBBiology</string>
    <string name="IBBusiness">IBBusiness</string>
    <string name="IBChemistry">IBChemistry</string>
    <string name="IBFinance">IBFinance</string>
    <string name="IBPhysics">IBPhysics</string>
    <string name="IBLaw">IBLaw</string>
    <string name="IBMath">IBMath</string>
    <string name="IBMusic">IBMusic</string>
    <string name="IBPerformance">IBPerformance</string>
    <string name="IBArt">IBArt</string>
    <string name="IBDrawingAndPainting">IBDrawingAndPainting</string>
    <string name="IBPsychology">IBPsychology</string>
    <string name="IBAgriculture">IBAgriculture</string>
    <string name="IBAnimalScience">IBAnimalScience</string>
    <string name="IBAnimationDesign">IBAnimationDesign</string>
    <string name="IBArchitecture">IBArchitecture</string>
    <string name="IBAstronomy">IBAstronomy</string>
    <string name="IBAutomobile">IBAutomobile</string>
    <string name="IBCultureStudy">IBCultureStudy</string>
    <string name="IBDatabase">IBDatabase</string>
    <string name="IBEducation">IBEducation</string>
    <string name="IBEnvironmentalScience">IBEnvironmentalScience</string>
    <string name="IBFilm">IBFilm</string>
    <string name="IBFood">IBFood</string>
    <string name="IBHealth">IBHealth</string>
    <string name="IBHistory">IBHistory</string>
    <string name="IBHorticulture">IBHorticulture</string>
    <string name="IBInvestment">IBInvestment</string>
    <string name="IBLanguage">IBLanguage</string>
    <string name="IBLiterature">IBLiterature</string>
    <string name="IBManagement">IBManagement</string>
    <string name="IBNewsAndMedia">IBNewsAndMedia</string>
    <string name="IBPhilosophy">IBPhilosophy</string>
    <string name="IBPhotography">IBPhotography</string>
    <string name="IBPolitics">IBPolitics</string>
    <string name="IBSocialScience">IBSocialScience</string>
    <string name="IBSpeaking">IBSpeaking</string>
    <string name="IBStatistics">IBStatistics</string>
    <string name="IBTheater">IBTheater</string>
    <string name="IBTrading">IBTrading</string>
    <string name="IBUrbanPlanning">IBUrbanPlanning</string>
    <string name="IBWebPageDesign">IBWebPageDesign</string>
    <string name="IBWriting">IBWriting</string>
    <string name="ICreateSubject">确认创建背景</string>
    <string name="BCreateSubject">确认创建</string>
    <string name="IBCreateHwReturnHwUndone">return</string>
    <string name="THwName">作业名称</string>
    <string name="THwDueDate">作业截至时间（美国时间）</string>
    <string name="PTYear">YYYY</string>
    <string name="TVYearNote">/</string>
    <string name="PTMonth">MM</string>
    <string name="TVMonthNote">/</string>
    <string name="PTDay">DD</string>
    <string name="PTHour">HR</string>
    <string name="TVHour">: </string>
    <string name="PTMinute">MI</string>
    <string name="TVHint">填写24小时制</string>
    <string name="TVPrior">提前</string>
    <string name="TVRemind">提醒</string>
    <string name="TVHourNote">时</string>
    <string name="TVMinuteNote">分</string>
    <string name="THwLocation">修改作业发生地（默认美国）</string>
    <string name="THwNotification">设置提醒</string>
    <string name="THwMemo">备注</string>
    <string name="BCreateHw">创建</string>
    <string name="IBCheckHwReturnHw">return</string>
    <string name="TCheckHwName">作业名称</string>
    <string name="TCheckHwDueDate">作业截至时间（美国时间）</string>
    <string name="TCheckHwLocation">修改作业发生地（默认美国）</string>
    <string name="TCheckHwNotification">设置提醒</string>
    <string name="TCheckHwMemo">备注</string>
    <string name="BChangeHw">修改</string>
    <string name="BDeleteHw">删除作业</string>
    <string name="TBCreateEventReturnMain">选项栏</string>
    <string name="IBCreateEventReturnMain">return</string>
    <string name="TCreateEvent">添加作业</string>
    <string name="THomeworkName">作业名</string>
    <string name="PTHomeworkName">未填写</string>
    <string name="TDuedate">截止日期</string>
    <string name="PTDuedate">请选择作业截止日期</string>
    <string name="IBDuedate">截止日期选择按钮</string>
    <string name="THomeworkNotificationSetting">作业提醒设置</string>
    <string name="IHomeworkNotificationSetting">作业提醒设置背景白色</string>
    <string name="TNotificationTime">提醒时间</string>
    <string name="TToDeadline">离作业截止时间还有</string>
    <string name="TDayNumBG">天数数字背景</string>
    <string name="TDayNum">-</string>
    <string name="TDeadlineDay">天时</string>
    <string name="THomeworkMemo">作业备注</string>
    <string name="PTHomeworkMemo">未填写</string>
    <string name="ICreateEvent">确认创建按钮图</string>
    <string name="BCreateEvent">确认创建</string>
    <string name="IBSchoolLogoReturnMain">return</string>
    <string name="BSchoolMissing">未找到自己的学校？</string>
    <string name="BPrincetonLG">美国普林斯顿大学</string>
    <string name="BHarvardLG">美国哈佛大学</string>
    <string name="BOxfordLG">英国牛津大学</string>
    <string name="BCambridgeLG">英国剑桥大学</string>
    <string name="BYaleLG">美国耶鲁大学</string>
    <string name="BMITLG">美国麻省理工大学</string>
    <string name="BColumbiaLG">美国哥伦比亚大学</string>
    <string name="BUChicagoLG">美国芝加哥大学</string>
    <string name="BETHZurichLG">瑞士苏黎世联邦理工学院</string>
    <string name="BImperialLG">英国帝国理工学院</string>
    <string name="BUCLLG">英国伦敦大学学院</string>
    <string name="BUPennsylvaniaLG">美国宾夕法尼亚大学</string>
    <string name="BNUSLG">新加坡国立大学</string>
    <string name="BNanyangLG">新加坡南阳理工大学</string>
    <string name="BEPFLLG">瑞士洛桑联邦理工学院</string>
    <string name="BEdinburghLG">英国爱丁堡大学</string>
    <string name="BUTokyoLG">日本东京大学</string>
    <string name="BStanfordLG">美国斯坦福大学</string>
    <string name="BNWULG">美国西北大学</string>
    <string name="BJHULG">美国约翰霍普金斯大学</string>
    <string name="BDukeLG">美国杜克大学</string>
    <string name="BCITLG">美国加州理工大学</string>
    <string name="BDartmouthLG">美国达特茅斯学院</string>
    <string name="BBrownLG">美国布朗大学</string>
    <string name="BNotreDameLG">美国圣母大学</string>
    <string name="BVanderbiltLG">美国范德堡大学</string>
    <string name="BRiceLG">美国莱斯大学</string>
    <string name="BCornellLG">美国康奈尔大学</string>
    <string name="BUWSLLG">美国华盛顿大学圣路易斯分校</string>
    <string name="BUCLALG">美国加州大学洛杉矶分校</string>
    <string name="BEmoryLG">美国埃默里大学</string>
    <string name="IBSingleEventReturnMain">作业详细内容返回主界面按钮</string>
    <string name="THWTitle">Event Name</string>
    <string name="TToHwDueDate">距离作业截止还有</string>
    <string name="BHwDueDays">作业截止时间背景</string>
    <string name="THwDueDays">0</string>
    <string name="THwDueDateDay">天</string>
    <string name="TDueDate">截止日期：</string>
    <string name="TDueDateYearA">2020</string>
    <string name="TDueDateYearB">年</string>
    <string name="TDueDateMonthA">0</string>
    <string name="TDueDateMonthB">月</string>
    <string name="TDueDateDayA">0</string>
    <string name="TDueDateDayB">日</string>
    <string name="IEditHW">编辑作业按钮背景</string>
    <string name="BEditHW">编辑作业</string>
    <string name="IDeleteHW">删除作业按钮背景</string>
    <string name="BDeleteHW">删除作业</string>
    <string name="TDeleteSureOrNot">确认删除？</string>
    <string name="BSureDelete">确认</string>
    <string name="BCancelSureDelete">取消</string>
    <string name="IBSearchUniversityReturnMain">return</string>
    <string name="TVSearchUniversityDuelendar">选择我的学校</string>
    <string name="BHarvard">美国哈佛大学</string>
</resources>