<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090E35">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageButton
                android:id="@+id/IBSingleEventReturnMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="#00FAE4E4"
                android:contentDescription="@string/IBSingleEventReturnMain"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/THWTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/THWTitle"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="19dp">

            <TextView
                android:id="@+id/TToHwDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/TToHwDueDate"
                android:text="@string/TToHwDueDate"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/BHwDueDays"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/BHwDueDays"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/rpbutton" />

            <TextView
                android:id="@+id/THwDueDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/THwDueDays"
                android:text="@string/THwDueDays"
                android:textColor="#FFFFFF"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/THwDueDateDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/BHwDueDays"
                android:layout_toEndOf="@id/BHwDueDays"
                android:contentDescription="@string/THwDueDateDay"
                android:text="@string/THwDueDateDay"
                android:textColor="#FFFFFF"
                android:textSize="29sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TDueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDate"
                    android:text="@string/TDueDate"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TDueDateYearA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDateYearA"
                    android:text="@string/TDueDateYearA"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TDueDateYearB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDateYearB"
                    android:text="@string/TDueDateYearB"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TDueDateMonthA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDateMonthA"
                    android:text="@string/TDueDateMonthA"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TDueDateMonthB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDateMonthB"
                    android:text="@string/TDueDateMonthB"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TDueDateDayA1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDateDayA"
                    android:text="@string/TDueDateDayA"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/TDueDateDayB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/TDueDateDayB"
                    android:text="@string/TDueDateDayB"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/IEditHW"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/IEditHW"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/confirm" />

            <Button
                android:id="@+id/BEditHW"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:background="#00FFFFFF"
                android:text="@string/BEditHW" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/IDeleteHW"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/IDeleteHW"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/confirm" />

            <Button
                android:id="@+id/BDeleteHW"
                android:layout_width="140dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:background="#00FFFFFF"
                android:text="@string/BDeleteHW" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>