<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/BHarvard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#090E35"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="66dp">

            <ImageButton
                android:id="@+id/IBSearchUniversityReturnMain"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/IBSearchUniversityReturnMain"
                android:scaleType="center"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:id="@+id/TVSearchUniversityDuelendarT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/TVSearchUniversityDuelendar"
                android:text="@string/TVSearchUniversityDuelendar"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:background="#40FFFFFF"
                        android:text="Button"
                        android:textColor="#FFFFFF"
                        android:textColorLink="#FFFFFF" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>